Bug fixes and minor functionalities implemented

--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,3 @@
-
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
         <a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" href="/account/manage">
@@ -17,7 +16,12 @@
     </li>
     <li class="nav-item">
         <a class="nav-link @ManageNavPages.AddressesNavClass(ViewContext)" id="address" href="/account/manage/addresses">
-            Address
+            Addresses
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link @ManageNavPages.OrdersNavClass(ViewContext)" id="orders" href="/account/manage/orders">
+            Orders
         </a>
     </li>
 </ul>
