--- a/Pages/Admin/Products/Index.cshtml
+++ b/Pages/Admin/Products/Index.cshtml
@@ -56,7 +56,7 @@
                                     Sold Out
                                 </span>
                             }
-                            else if (item.Price == item.DiscountedPrice)
+                            else if (item.Price != item.DiscountedPrice)
                             {
                                 <p class="product-item-price mb-1">
                                     <s class="price-compare text-muted me-1">
