--- a/Pages/Admin/_Layout.cshtml
+++ b/Pages/Admin/_Layout.cshtml
@@ -38,29 +38,29 @@
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="catalog">
                             <li>
-                                <a id="catalog-sale" class="dropdown-item text-dark" href="#">
+                                <a id="catalog-sale" class="dropdown-item text-dark" href="/Collections/Sale">
                                     Sale
                                 </a>
                             </li>
                             <div class="dropdown-divider"></div>
                             <li>
-                                <a id="catalog-men" class="dropdown-item text-dark" href="{{ route('products.men') }}" aria-current="">
+                                <a id="catalog-men" class="dropdown-item text-dark" href="/Collections/Men" aria-current="">
                                     Men
                                 </a>
                             </li>
                             <li>
-                                <a id="catalog-women" class="dropdown-item text-dark" href="{{ route('products.women') }}" aria-current="">
+                                <a id="catalog-women" class="dropdown-item text-dark" href="/Collections/Women" aria-current="">
                                     Women
                                 </a>
                             </li>
                             <li>
-                                <a id="catalog-unisex" class="dropdown-item text-dark" href="{{ route('products.unisex') }}" aria-current="">
+                                <a id="catalog-unisex" class="dropdown-item text-dark" href="/Collections/Unisex" aria-current="">
                                     Unisex
                                 </a>
                             </li>
                             <div class="dropdown-divider"></div>
                             <li>
-                                <a id="catalog-all" class="dropdown-item text-dark" href="{{ route('products.all') }}" aria-current="">
+                                <a id="catalog-all" class="dropdown-item text-dark" href="/Collections/AllProducts" aria-current="">
                                     All products
                                 </a>
                             </li>
