--- a/Pages/Checkout/OrderDetails.cshtml
+++ b/Pages/Checkout/OrderDetails.cshtml
@@ -88,7 +88,9 @@
 
         <div class="alert alert-info mb-4">
             <h4 class="h5 alert-heading mb-1" style="margin-top: auto;">Special instructions</h4>
-            <div>{{ $order->note }}</div>
+            <div>
+                @Html.Raw(Model.OrderItems.First().Order.Note)
+            </div>
         </div>
 
         <div class="row mx-sm-n2">
