Add tests and authorization

--- a/Pages/Checkout/CheckoutInformation.cshtml
+++ b/Pages/Checkout/CheckoutInformation.cshtml
@@ -179,7 +179,7 @@ else
 </div>
 
 <div class="step__footer" data-step-footer="">
-    <button name="button" type="submit" id="continue_button" class="step__footer__continue-btn btn" aria-busy="false">
+    <button name="button" type="submit" id="continue_to_shipping_button" class="step__footer__continue-btn btn" aria-busy="false">
         <span class="btn__content" data-continue-button-content="true">
             Continue to shipping
         </span>
