--- a/Pages/Shared/_AdminPartial.cshtml
+++ b/Pages/Shared/_AdminPartial.cshtml
@@ -12,20 +12,20 @@
         </a>
     </li>
     <li class="nav-item dropdown active">
-        <a id="nav-link-2" class="nav-link  dropdown-toggle" href="#" aria-current=""
+        <a id="product_menu" class="nav-link  dropdown-toggle" href="#" aria-current=""
            role="button"
            data-bs-toggle="dropdown" aria-expanded="false">
             Products
         </a>
         <ul class="dropdown-menu " aria-labelledby="nav-link-2">
             <li>
-                <a class="dropdown-item" href="/Admin/Products" aria-current="">
+                <a id="manage_products" class="dropdown-item" href="/Admin/Products" aria-current="">
                     Products
                 </a>
             </li>
             <div class="dropdown-divider"></div>
             <li>
-                <a class="dropdown-item" href="/Admin/Discounts" aria-current="">
+                <a id="manage_discounts" class="dropdown-item" href="/Admin/Discounts" aria-current="">
                     Discounts
                 </a>
             </li>
