--- a/Pages/Admin/Discounts/Create.cshtml
+++ b/Pages/Admin/Discounts/Create.cshtml
@@ -27,7 +27,7 @@
                                 <span asp-validation-for="Discount.Name" class="text-danger"></span>
                             </div>
                             <div class="col-md-12">
-                                <input asp-for="Discount.Description" class="form-control" placeholder="Discount Description"/>
+                                <textarea asp-for="Discount.Description" class="form-control" placeholder="Discount Description"></textarea>
                                 <span asp-validation-for="Discount.Description" class="text-danger"></span>
                             </div>
                             <div class="col-md-3">
